style: overflow fix

--- a/src/components/Cards/FollowerListCard/FollowerListCard.css
+++ b/src/components/Cards/FollowerListCard/FollowerListCard.css
@@ -1,4 +1,4 @@
 .followerListcard{
     height: 70vh;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
